# moombox

./: .gitignore  .justfile  Containerfile  LICENSE  README.md  config.container.toml  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/moombox/: __main__.py  app.py  config.py  database.py  extractor.py  feed_monitor.py  notifications.py  tasks.py
src/moombox/static/: moombox.css
src/moombox/templates/: index.html  panel_config.html  panel_config_apply.html  panel_tasks.html  video_item.html  video_job.html  video_job_details.html  video_table.html
tests/: test_extractor.py  test_pattern_map.py
