[project]
name = "moombox"
version = "0.0.1"

classifiers = [
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "quart ~= 0.19.6",
    "httpx ~= 0.27.0",
    "moonarchive @ git+https://github.com/nosoop/moonarchive",
    "msgspec ~= 0.8.6",
    "tldextract ~= 5.1.2",
]

[project.scripts]
moombox = "moombox.app:main"

[project.optional-dependencies]
dev = [
    "mypy ~= 1.9.0",
    "pytest ~= 8.2.0",
    "ruff ~= 0.3.7",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]

[tool.ruff]
line-length = 96
lint.extend-select = ["ANN001", "ANN201", "ANN202"]
