[project]
name = "moombox"
version = "0.5.5"

classifiers = [
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "aiolimiter ~= 1.2.1",
    "apprise ~= 1.9.0",
    "feedparser ~= 6.0.11",
    "quart ~= 0.19.6",
    "httpx ~= 0.27.0",
    "moonarchive @ git+https://github.com/nosoop/moonarchive",
    "msgspec ~= 0.18.6",
    "Unidecode ~= 1.3.8",
]

[project.scripts]
moombox = "moombox.app:main"

[project.optional-dependencies]
dev = [
    "mypy ~= 1.9.0",
    "pytest ~= 8.2.0",
    "ruff ~= 0.3.7",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]

[tool.ruff]
line-length = 96
lint.extend-select = ["ANN001", "ANN201", "ANN202"]

[tool.setuptools.package-data]
moombox = [ "static/*", "templates/*" ]
